# haskov-chains

./: .gitignore  LICENSE  README.md  haskov-chains.cabal  markov.cabal  sampletext.txt
src/: Main.hs
