name:                markov
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pixlark/markov#readme
license:             BSD3
license-file:        LICENSE
author:              Paul Tilley
maintainer:          t1000.pixlark@gmail.com
copyright:           (c) Paul Tilley 2021
category:            Terminal
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable markov
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers >= 0.6,
                       random >= 1.1